--- a/assets/css/icons.css
+++ b/assets/css/icons.css
@@ -12,5 +12,5 @@
 .gg-podcast::after{border:2px solid;width:8px;height:18px;left:2px;top:-10px;border-radius:4px}
 .gg-podcast::before{width:10px;height:4px;top:12px;left:1px;border-right:4px solid transparent;box-shadow:0 2px 0,inset -2px 0 0}
 
-.gg-talk{box-sizing:border-box;position:relative;display:inline-block;transform:scale(var(--ggs,1));width:22px;height:22px;border:2px solid;border-radius:4px}
-.gg-talk::before{content:"";display:inline-block;box-sizing:border-box;position:absolute;width:0;height:10px;border-top:5px solid transparent;border-bottom:5px solid transparent;border-left:6px solid;top:4px;left:7px}
+.gg-talk{box-sizing:border-box;position:relative;display:inline-block;transform:scale(var(--ggs,1));width:22px;height:22px;border:2px solid;border-radius:4px;--ggs:0.65;margin-left:-2px; top:5px;}
+.gg-talk::before{content:"";display:inline-block;box-sizing:border-box;position:absolute;width:0;height:10px;border-top:5px solid transparent;border-bottom:5px solid transparent;border-left:6px solid;top:4px;left:7px;}
