--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,6 +10,10 @@ body {
   padding: 0.15em 0.25em;
 }
 
+p {
+  line-height: 1.5em;
+}
+
 section {
   border-width: 0 0 1px 0;
 }
@@ -28,10 +32,11 @@ ul.content li a {
   margin: 0 0.5em 0 0.25em;
 }
 
-span.tag {
+span.category {
   padding: 0.1em 0.5em 0.1em 0.5em;
   background-color: #555555;
   color: #eeeeee;
+  white-space: nowrap;
 }
 
 span.architecture {
